Updating yaml - not sure why this was needed…

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -21,7 +21,7 @@ context:
     shortcourse_details_location:
       - { location: 'Royal College of Art Kensington Gore' }
     shortcourse_details_register_link: '#'
-    about:
+    about_course_accordion:
       - path:
         value:
           body: 'TBC'
