--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -11,10 +11,10 @@ context:
       message: 'Next course starts Thursday 19 March 2020'
       link: '#'
       action: 'Book now for £900'
-    shortcourse_image: true
-    shortcourse_image_caption: Watch the course introduction
-    shortcourse_description_title: 'Understand the purpose of design thinking in promoting innovation and learn real-world applications and strategies for design thinking.'
-    shortcourse_description_copy: '<p>At the RCA, we teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs. In contrast to standard, linear approaches that build on tested models, design thinking is creatively structured, analytic and responsive. It draws in diverse disciplines and multiple areas of expertise and exploration, starting with the core premise that everything is a design problem.</p><p>Through the application of this informed analysis within business-driven, public-facing and community-centred contexts, design thinking can produce innovation, which in turn enables brands to remain competitive in changing markets.</p>'
+    video_caption: Watch the course introduction
+    introduction_image: True
+    introduction: 'Understand the purpose of design thinking in promoting innovation and learn real-world applications and strategies for design thinking.'
+    body: '<p>At the RCA, we teach design thinking, training designers who go on to lead global brands worldwide as creative directors and CEOs. In contrast to standard, linear approaches that build on tested models, design thinking is creatively structured, analytic and responsive. It draws in diverse disciplines and multiple areas of expertise and exploration, starting with the core premise that everything is a design problem.</p><p>Through the application of this informed analysis within business-driven, public-facing and community-centred contexts, design thinking can produce innovation, which in turn enables brands to remain competitive in changing markets.</p>'
     shortcourse_details_fees:
       - { fee: '&pound;600 before 28 February 2020' }
       - { fee: '&pound;900 after 29 February 2020' }
@@ -59,7 +59,7 @@ context:
           body: 'TBC'
           heading: 'About the Design Museum'
     programme_gallery:
-    curriculum_video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
+    video: 'https://www.youtube.com/watch?v=glIIF-kBXf0'
     shortcourse_gallery:
       - slide:
         value:
