Wire up modal and correct pattern variables

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -127,3 +127,16 @@ context:
     message: 'Next course starts Thursday 19 March 2020'
     action: 'Book now for £900'
     modal: 'booking-details'
+  access_planit_data:
+    - {
+        'start_date': !!timestamp '2020-05-13 2:00:00',
+        'end_date': !!timestamp '2020-05-15 3:00:00',
+      }
+    - {
+        'start_date': !!timestamp '2020-06-20 2:00:00',
+        'end_date': !!timestamp '2020-06-22 2:00:00',
+      }
+    - {
+        'start_date': !!timestamp '2020-11-01 2:00:00',
+        'end_date': !!timestamp '2020-11-05 2:00:00',
+      }
