Add short course details fields to the modal

--- a/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/shortcourses/short_course.yaml
@@ -1,5 +1,10 @@
 context:
   page:
+    course_details_text: '<p>Early bird offer until 10 March 2020. Booking closes 18 March 2020 or when fully booked.</p>'
+    terms_and_conditions:
+      body: '<p>Please be sure to read our <a href="http://facebook.com">Terms &amp; Conditions</a> before applying.</p>'
+    frequently_asked_questions:
+      body: '<p>For more information, please visit our <a href="https://google.com">FAQs</a> before applying.</p>'
     breadcrumb:
       - { label: 'Short courses', link: /short-courses/ }
       - {
