--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.yaml
@@ -80,6 +80,30 @@ context:
           link: '#',
           description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
         }
+    programmes:
+      - item:
+        title: false
+        related_items:
+          - item:
+            title: Design thinking & innovation
+            degree_level: Executive education
+            programme_description_subtitle: Design thinking & innovation at the RCA sets out to inspire design innovation.
+            img: http://placehold.it/300x270/fff/000
+          - item:
+            title: Creative Leadership
+            degree_level: Executive education
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270/ff5d1c/fff
+          - item:
+            title: The Helen Hamlyn Centre for Design PhD
+            degree_level: MPhil/PhD
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270
+          - item:
+            title: Student workshops
+            degree_level: Student programme
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270
     centre_news:
       title: More at the Helen Hamlyn Design Centre
       slides:
