--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.yaml
@@ -170,6 +170,16 @@ context:
             link: '#'
             person: false
             image: True
+    text_teaser:
+      title: Our research staff
+      description: Our research staff span a broad range of subjects and areas of expertise.
+      action: Visit all research staff
+      link: '#'
+    bottom_feature_image: true
+    bottom_feature_heading: Angel Club at the RCA
+    bottom_feature_meta_heading: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id fermentum mi.
+    bottom_feature_meta_text: Aenean nec cursus ipsum. Pellentesque sodales, lectus a placerat eleifend, purus quam malesuada augue
+    bottom_feature_meta_link: '#'
     news:
       - item:
         meta: 'News'
