--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
@@ -10,17 +10,17 @@ context:
           after: '%'
           number: 33
           meta:
-          body: 1 in 3 of our graduates are business owners or independent professionals.
+          summary: 1 in 3 of our graduates are business owners or independent professionals.
       - stat:
         value:
           number: 73
           meta: Nationalities
-          body: Our students come from all sections of the globe
+          summary: Our students come from all sections of the globe
       - stat:
         value:
           after: st
           number: 1
-          body: We're the top rated art & design university in the world
+          summary: We're the top rated art & design university in the world
 
 tags:
   image:
