--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page.yaml
@@ -105,23 +105,36 @@ context:
     middle_feature_meta_text: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
     middle_feature_meta_link: '#'
     stats_block:
+      title: Lorem ipsum dolor sit
+      link: '#'
+      action: See all Outcomes
       statistics:
         - stat:
           value:
             after: '%'
-            number: 33
-            meta:
-            body: 1 in 3 of our graduates are business owners or independent professionals.
+            number: 70
+            summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
         - stat:
           value:
-            number: 73
+            after: '%'
+            number: 33
             meta: Nationalities
-            body: Our students come from all sections of the globe
+            summary: 1 in 3 of our graduates are business owners or independent professionals
+        - stat:
+          value:
+            number: 76
+            meta: Nationalities
+            summary: Our students come from all corners of the globe.
         - stat:
           value:
             after: st
             number: 1
-            body: We're the top rated art & design university in the world
+            summary: We're the top rated art & design university in the world.
+        - stat:
+          value:
+            number: 100
+            meta: Lorem Ipsum
+            summary: Our students come from all corners of the globe.
     programmes:
       - item:
         title: false
