--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
@@ -3,14 +3,10 @@ context:
     breadcrumb:
       - { label: 'Research', link: /research/ }
     title: Research at the RCA
-    introduction: 'Enterprise at the RCA spans incubation, innovation and business acceleration programmes; consultancy and knowledge exchange, and custom executive short courses.'
+    introduction: 'The Royal College of Art excels in world-leading design and art research and creative innovation.'
     introduction_link: '#'
     introduction_link_text: 'Read more'
-    feature_image: true
-    feature_heading: Our Programmes
-    feature_meta_heading: Join a thriving community of more than 250 MPhil and PhD students
-    feature_meta_text: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
-    feature_meta_link: '#'
+    feature_image: false
     enterprise_highlights:
       - slide:
         meta: 'School of Design'
@@ -30,31 +26,7 @@ context:
         description: 'Creating world class experiences that started at the RCA'
         image: true
         link: '#'
-    enterprise_rca:
-      - {
-          title: 'Innovation RCA',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
-      - {
-          title: 'Consultancy & knowledge exchange',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
-      - {
-          title: 'Custom executive education',
-          link: '#',
-          meta: false,
-          person: false,
-          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
-          image: true,
-        }
+    enterprise_rca: false
     related_research_centres_schools:
       - item:
         title: Research centres
@@ -103,57 +75,33 @@ context:
     middle_feature_meta_heading: Join a thriving community of more than 250 MPhil and PhD students
     middle_feature_meta_text: Pursue cutting-edge research at the world's leading postgraduate university for art & design.
     middle_feature_meta_link: '#'
-    stats_block:
-      title: Lorem ipsum dolor sit
-      default_notch_override: true
-      link: '#'
-      action: See all Outcomes
-      statistics:
-        - stat:
-          value:
-            after: '%'
-            number: 70
-            summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper accumsan urna.
-        - stat:
-          value:
-            after: '%'
-            number: 33
-            meta: Nationalities
-            summary: 1 in 3 of our graduates are business owners or independent professionals
-        - stat:
-          value:
-            number: 76
-            meta: Nationalities
-            summary: Our students come from all corners of the globe.
-        - stat:
-          value:
-            after: st
-            number: 1
-            summary: We're the top rated art & design university in the world.
-        - stat:
-          value:
-            number: 100
-            meta: Lorem Ipsum
-            summary: Our students come from all corners of the globe.
-    startups:
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
-      - slide:
-        meta: 'Startups'
-        title: 'Lorem ipsum dolor sit'
-        description: 'How innovative and disruptive technologies can address the world’s most intractable challenges'
-        image: true
-        link: '#'
+    related_courses: false
+    stats_block: false
+    startups: false
+    programmes:
+      - item:
+        title: false
+        related_items:
+          - item:
+            title: Design thinking & innovation
+            degree_level: Executive education
+            programme_description_subtitle: Design thinking & innovation at the RCA sets out to inspire design innovation.
+            img: http://placehold.it/300x270/fff/000
+          - item:
+            title: Creative Leadership
+            degree_level: Executive education
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270/ff5d1c/fff
+          - item:
+            title: The Helen Hamlyn Centre for Design PhD
+            degree_level: MPhil/PhD
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270
+          - item:
+            title: Student workshops
+            degree_level: Student programme
+            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            img: http://placehold.it/300x270
     research:
       title: Research at the RCA
       slides:
@@ -183,11 +131,7 @@ context:
       description: Our research staff span a broad range of subjects and areas of expertise.
       action: Visit all research staff
       link: '#'
-    bottom_feature_image: true
-    bottom_feature_heading: Angel Club at the RCA
-    bottom_feature_meta_heading: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id fermentum mi.
-    bottom_feature_meta_text: Aenean nec cursus ipsum. Pellentesque sodales, lectus a placerat eleifend, purus quam malesuada augue
-    bottom_feature_meta_link: '#'
+    bottom_feature_image: false
     news:
       - item:
         meta: 'News'
