--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.yaml
@@ -26,7 +26,31 @@ context:
         description: 'Creating world class experiences that started at the RCA'
         image: true
         link: '#'
-    enterprise_rca: false
+    enterprise_rca:
+      - {
+          title: 'Innovation RCA',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
+      - {
+          title: 'Consultancy & knowledge exchange',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
+      - {
+          title: 'Custom executive education',
+          link: '#',
+          meta: false,
+          person: false,
+          description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in accumsan massa.',
+          image: true,
+        }
     related_research_centres_schools: false
     middle_feature_image: true
     middle_feature_heading: Enterprise programmes
