--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
@@ -26,6 +26,7 @@ context:
         description: 'Creating world class experiences that started at the RCA'
         image: true
         link: '#'
+    enterprise_highlights_title: Research highlights
     enterprise_rca: false
     related_research_centres_schools:
       - item:
@@ -33,42 +34,41 @@ context:
         related_items:
           - item:
             title: The Helen Hamlyn Centre for Design
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Design research and projects with industry that contribute to improving people's lives.
             img: http://placehold.it/300x270/fff/000
           - item:
             title: HELIX Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Bringing together design researchers and clinical staff to tackle the big demands in healthcare today.
             img: http://placehold.it/300x270/ff5d1c/fff
           - item:
             title: Intelligent Mobility Design Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
-            img: http://placehold.it/300x270
+            programme_description_subtitle: Leading research at the intersection of people, mobility and technology within a complex and changing urban and global environment.
           - item:
             title: RCA Robotics Laboratory
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Developing new robotic technologies enhancing access, safety and performance in a wide range of industrial applications.
             img: http://placehold.it/300x270/ff5d1c/fff
           - item:
             title: Materials Science Research Centre
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Design-led disruptive research environment to develop new approaches to innovation in materials and applications.
             img: http://placehold.it/300x270
       - item:
         title: Schools
         related_items:
           - item:
             title: School of Architecture
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Taught and research degrees in the spatial disciplines, from RIBA-validated part II architecture to urban, environmental and interior design practices.
             img: http://placehold.it/300x270/fff/000
           - item:
             title: School of Communication
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: The expanded field of communication spans visual disciplines of animation, graphic design and illustration as well as experimental sound, code, text, space, event and experience design.
             img: http://placehold.it/300x270/ff5d1c/fff
           - item:
             title: School of Arts & Humanities
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Develop your own practice and career as an artist, maker, historian, theorist, writer and curator.
             img: http://placehold.it/300x270
           - item:
             title: School of Design
-            programme_description_subtitle: Architecture at the RCA sets out to inspire design innovation
+            programme_description_subtitle: Design courses and degrees in specialising in product design to AR and AV, and from the design of specific objects and products to interactions, systems and policies.
             img: http://placehold.it/300x270
     middle_feature_image: true
     middle_feature_heading: Research degrees
@@ -107,25 +107,31 @@ context:
       slides:
         - slide:
           value:
-            meta: 'News'
+            meta: 'Awards'
             title: 'Writing student wins £25,000 economics prize'
+            summary: 'We offer our researchers the best environment and resources to develop and promote their research within the fields of art and design.'
             link: '#'
             person: false
             image: True
+            modifier: long-description
         - slide:
           value:
-            meta: 'News'
+            meta: 'Awards'
             title: 'InnovationRCA awarded Accelerator of the Year'
+            summary: 'We offer our researchers the best environment and resources to develop and promote their research within the fields of art and design.'
             link: '#'
             person: false
             image: True
+            modifier: long-description
         - slide:
           value:
-            meta: 'News'
+            meta: 'Awards'
             title: 'MA Fashion Womenswear Student Launches Fashion Boycott'
+            summary: 'We offer our researchers the best environment and resources to develop and promote their research within the fields of art and design.'
             link: '#'
             person: false
             image: True
+            modifier: long-description
     text_teaser:
       title: Our research staff
       description: Our research staff span a broad range of subjects and areas of expertise.
