--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.yaml
@@ -3,7 +3,7 @@ context:
   heading: Learnings that last a lifetime
   stats_block:
     title: Learnings that last a lifetime
-    bg_image_url: '//place-puppy.com/1000x500'
+    bg_image_url: '//placekitten.com/1000/500'
     statistics:
       - stat:
         value:
@@ -27,6 +27,6 @@ tags:
     stats_block.background_image max-1000x500 as bg_image:
       target_var: bg_image
       raw:
-        url: '//place-puppy.com/1000x500'
+        url: '//placekitten.com/1000/500'
         width: '1000'
         height: '500'
