Adding yaml for programme detail - people component fix

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.yaml
@@ -15,5 +15,17 @@ context:
   alumni_gallery: 'true'
   programme_slideshow_modifier: slideshow--author-info
   related_staff:
-    - item
-    - item
+    - {
+        name: 'Beth Hughes',
+        role: 'Head of Programmes',
+        description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.',
+        link: '#',
+        link_text: 'Read more',
+      }
+    - {
+        name: 'Beth Hughes',
+        role: 'Head of Programmes',
+        description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.',
+        link: '#',
+        link_text: 'Read more',
+      }
