--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--research.yaml
@@ -1,5 +1,7 @@
 context:
   page:
+    breadcrumb:
+      - { label: 'Research', link: /research/ }
     title: Research at the RCA
     introduction: 'The Royal College of Art excels in world-leading design and art research and creative innovation.'
     introduction_link: '#'
