--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
@@ -7,8 +7,20 @@ context:
     edit_date: 7 March 2020
     introduction: Join a thriving community of more than 250 MPhil and PhD students pursuing cutting-edge research at the world's leading postgraduate university for art & design
     related_staff:
-      - item
-      - item
+      - {
+          name: 'Beth Hughes',
+          role: 'Head of Programmes',
+          description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.',
+          link: '#',
+          link_text: 'Read more',
+        }
+      - {
+          name: 'Beth Hughes',
+          role: 'Head of Programmes',
+          description: 'Director of her own practice, Beth Hughes has worked on projects of all scales, public and private, around the world.',
+          link: '#',
+          link_text: 'Read more',
+        }
     staff_link: false
     index_module:
       title: Index module
