Hooking up anchor headings

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.yaml
@@ -6,6 +6,12 @@ context:
     title: MRes RCA
     edit_date: 7 March 2020
     introduction: Join a thriving community of more than 250 MPhil and PhD students pursuing cutting-edge research at the world's leading postgraduate university for art & design
+    anchor_nav:
+      - { title: Introduction, link: '#introduction' }
+      - { title: Article 1, link: '#article-one' }
+      - { title: Article 2, link: '#article-two' }
+      - { title: Index Module, link: '#index' }
+      - { title: Ask a question, link: '#contact' }
     related_staff:
       - {
           name: 'Beth Hughes',
