Builds out the project page fields and related models

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.yaml
@@ -1,14 +1,13 @@
 context:
   page:
+    funding: £5m, Research Council
     key_details_tags:
       - { tag: School of Design }
       - { tag: Studio project }
       - { tag: 2018 }
-    key_details_funding: £5m, Research Council
-    key_details_expertise:
-      - { title: Product design, link: '#' }
-      - { title: Fashion, link: '#' }
-      - { title: Innovation, link: '#' }
-      - { title: Textiles, link: '#' }
-    key_details_download: '#'
-    key_details_download_course: Archictecture MA
+    specification_document: Archictecture MA
+  subjects:
+    - { title: Product design, link: '#' }
+    - { title: Fashion, link: '#' }
+    - { title: Innovation, link: '#' }
+    - { title: Textiles, link: '#' }
