--- a/rca/project_styleguide/templates/patterns/organisms/related-links/related-links.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/related-links/related-links.yaml
@@ -1,5 +1,8 @@
 context:
   related_links:
-    - { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
-    - { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
-    - { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
+    - item:
+      value: { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
+    - item:
+      value: { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
+    - item:
+      value: { text: 'Lorem ipsum dolor sit', href: 'http://www.google.com' }
